<resources>
    <string name="app_name">NgelabPremiumChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Alert Dialog String-->
    <string name="message_sign_out">Are you sure logging out your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!--Action String-->
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_search">Search</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_groups">Groups</string>
    <!--Auth Fragment String-->
    <string name="til_email">Email Address</string>
    <string name="til_password">Password</string>
    <string name="til_forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="til_name">Full Name</string>
    <string name="til_phone">Phone Number</string>
    <string name="til_school">School Name</string>
    <string name="til_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="tv_forgot_password">Forgot \nPassword?</string>
    <string name="tv_info_reset_password">Enter your email address and we\'ll send a link to reset your password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="tv_success_sent_reset">Password Reset \nEmail Sent</string>
    <string name="tv_info_email">We sent instruction to pick a new password to</string>
    <string name="tv_resend_password">Didn\'t get the email? Tap here to resend it</string>
    <string name="tv_sign_up">Don\'t Have Account? Sign Up</string>
    <!--Text Message String-->
    <string name="text_empty_field">This Field is Empty</string>
    <string name="text_invalid_email">Invalid Email Address</string>
    <string name="text_failed_login">Failed Login Your Account</string>
    <string name="text_pass_didnt_match">Password Didn\'t Match</string>
    <string name="text_failed_register">Failed Register Your Account</string>
    <string name="text_please_login">Please Login to Your Account</string>
    <string name="text_under_construction">Under Construction, Coming Soon</string>
    <string name="text_failed_sent_reset">Failed sent reset password to your email</string>
    <!--Main Menu String-->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_edit_profile">Edit Profile</string>
    <string name="nav_my_contacts">My Contacts</string>
    <string name="nav_help">Help</string>
</resources>