<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_background"
    tools:context=".fragment.LandingFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:src="@drawable/logo_vertical"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/noto_sans"
                android:padding="15dp"
                android:text="@string/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_logo" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_google"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:textSize="13sp"
                android:text="@string/tv_sign_up"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>